# ai_generated_pdf_report

./: pyproject.toml
basics/: __init__.py  __main__.py
basics/templates/: base.html
basics/utils/: __init__.py  ai_response.py  html_to_pdf.py
